Add method to prepare the DB before uploading so that only new nonprofits are marked as valid
